# chessRobot

./: .gitignore  .gitmodules  LICENSE  README.md  chessBot.py  chessEngine.py  conf.py  coordinate.py  difficulty.py  echiquier.py  evalBar.py  game.py  main.py  pyproject.toml  requirements.txt  robot-test.ipynb  save.py  setup_robot.ipynb  setup_robot.py
libs/: gripper.py
