[project]
name = "chessrobot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ur-rtde (>=1.6.1,<2.0.0)",
    "pymodbus (==2.5.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
